--- a/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
@@ -30,7 +30,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.1 <date>2022</date>
+                <edition>v 1.2.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-29T19:04:10.437Z" user="admin">29/09/2022 19:04:10</note>
+        <note type="lastUpdated" date-time="2022-09-30T15:31:25.734Z" user="admin">30/09/2022 15:31:25</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">Auto
@@ -101,6 +101,7 @@
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:34:32.228Z" user="sameer">First published version</note>
           <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:46:37.48Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
           <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T19:04:06.298Z" user="john">Material added to introduction, notes, and bibliography in line with the other texts in this group.</note>
+          <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:31:21.721Z" user="john">Further minor edits.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -528,33 +529,33 @@
               mahāmudre | mahāmudrāmantrapadaiḥ svāhā.<note place="end" xml:id="UT22084-090-040-49">
                 Hidas has translated the dhāraṇī based on his edition, and rather than retranslate
                 it, we give his translation here. Substantive variants between the Sanskrit basis
-                for his translation and the Degé have been noted above. “<mantra xml:lang="en" type="dharani">Oṃ veneration to the glorious Buddha distinguished in all the Three
-                  Worlds. Namely, oṃ bhrūṃ bhrūṃ bhrūṃ, purge, purge, purify, purify, O Unequalled
+                for his translation and the Degé have been noted above. “<mantra xml:lang="en" type="dharani">Oṁ veneration to the glorious Buddha distinguished in all the Three
+                  Worlds. Namely, oṁ bhrūṃ bhrūṃ bhrūṃ, purge, purge, purify, purify, O Unequalled
                   Enveloping Splendor Sparkle Destiny Sky, O the One of Purified Nature, O the One
                   Purified by the Topknot Victory, let all Tathāgatas consecrate me with
                   consecrations of the nectar of the excellent Sugata’s words along with great seals
-                  and mantrapadas, oṃ bring, bring, O the One who Nourishes Life, purge, purge,
+                  and mantrapadas, oṁ bring, bring, O the One who Nourishes Life, purge, purge,
                   purify, purify, O the One Purified by Sky Nature, O the One Purified by the
                   Topknot Victory, O the One Impelled by Thousand Rays, O the One Beholding all
                   Tathāgatas, O the One Fulfilling the Six Perfections, O Mother of all Tathāgatas,
                   O the One Established in the Ten Stages, O the One Empowered by the Empowerment of
-                  the Heart of all Tathāgatas, oṃ O Seal, O Seal, O Great Seal, O the One Purified
+                  the Heart of all Tathāgatas, oṁ O Seal, O Seal, O Great Seal, O the One Purified
                   by the Firmness of the Vajra Body, O the One Purged of all Obscurations Resulting
                   from Actions, turn back for me O Life-purged One, O the One Empowered by the
-                  Empowerment of the Vow of all Tathāgatas, oṃ muni muni, mahāmuni, vimuni vimuni,
+                  Empowerment of the Vow of all Tathāgatas, oṁ muni muni, mahāmuni, vimuni vimuni,
                   mahāvimuni, mati mati, mahāmati, mamati, sumati, O the One Purified by Truth and
-                  the True Goal, O the One Purged by a Burst Open Mind, oṃ he he, triumph triumph,
+                  the True Goal, O the One Purged by a Burst Open Mind, oṁ he he, triumph triumph,
                   succeed succeed, recollect recollect, manifest manifest, expand expand, O the One
-                  Empowered by the Empowerment of all Buddhas, oṃ O Pure One, O Pure One, O Awakened
+                  Empowered by the Empowerment of all Buddhas, oṁ O Pure One, O Pure One, O Awakened
                   One, O Awakened One, O Vajra, O Vajra, O Great Vajra, O Vajra-essence, O
                   Victory-essence, O Triumph-essence, O Vajra-flame-essence, O Vajra-born, O
                   Vajra-produced, O Vajra, O the One with a Vajra, let my body become a vajra and
                   that of all beings, let there be body-purification for me and purification of all
                   destinies, O the One Empowered by the Empowerment of the Heart of all Tathāgatas,
-                  let all Tathāgatas provide encouragement, oṃ awake awake, succeed succeed, awaken
+                  let all Tathāgatas provide encouragement, oṁ awake awake, succeed succeed, awaken
                   awaken, wake up, wake up, liberate liberate, release release, purge purge, purify
                   purify, liberate completely, O the One Purified by an Enveloping Ray, O the One
-                  Empowered by the Empowerment of the Heart of all Tathāgatas, oṃ O Seal O Seal, O
+                  Empowered by the Empowerment of the Heart of all Tathāgatas, oṁ O Seal O Seal, O
                   Great Seal, O Great Seal and Mantrapada svāhā</mantra>” (Hidas 2020, p.
                 154).</note>
                         </mantra>
