--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadhvajāgrakeyūranāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-009"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-23T14:23:09.813Z" user="admin">23/08/2022 14:23:09</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-10-11T10:45:45.167Z" user="admin">11/10/2022 10:45:45</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-10-11T10:45:31.026Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-11T10:45:31.026Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
