--- a/translations/tengyur/placeholders/052-045_toh2304-lta_ba_mdor_bsdus_pa.xml
+++ b/translations/tengyur/placeholders/052-045_toh2304-lta_ba_mdor_bsdus_pa.xml
@@ -4,27 +4,38 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lta ba mdor bsdus pa</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn"/>
-                <title type="mainTitle" xml:lang="en"/>
+                <title xml:lang="bo" type="mainTitle">ལྟ་བ་མདོར་བསྡུས་པ།</title>
+                <title xml:lang="Bo-Ltn" type="mainTitle">lta ba mdor bsdus pa/</title>
+                <title xml:lang="en" type="mainTitle">A Summary of the View</title>
+                <title xml:lang="bo" type="longTitle">ལྟ་བ་མདོར་བསྡུས་པ་ཞེས་བྱ་བ།</title>
+                <title xml:lang="Bo-Ltn" type="longTitle">lta ba mdor bsdus pa zhes bya ba/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT23703-052-045"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh2304" type="text">
                     <ref>Toh 2304</ref>
                     <biblScope>ff.244r-245v</biblScope>
-                    <location count-pages="">
-                        <start volume="52" page="489"/>
-                        <end volume="52" page="492"/>
+                    <author ref="eft:entity-17650" xml:lang="Sa-Ltn">Nāropa</author>
+                    <author role="translatorTib" ref="eft:entity-17608" xml:lang="Bo-Ltn">lo tsa ba mar pa chos kyi blo gros</author>
+                    <location work="UT23703" count-pages="4">
+                        <volume number="52" start-page="487" end-page="490"/>
                     </location>
                     <idno parent-id="O1JC76301JC21617" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC76301JC8886" work="W23703"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:37:11 by admin</note>
+                <note type="lastUpdated" date-time="2022-10-11T13:10:55.201Z" user="admin">11/10/2022 13:10:55</note>
+                <note type="updated" update="import" value="fileDesc" import="tengyur-data-2303-2325_PH_new_v2.4.xml" date-time="2021-11-02T13:47:33.72Z" user="admin"/>
+                <note type="updated" update="translation-status" value="3" date-time="2022-10-11T13:10:50.853Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-10-11T13:10:50.853Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
