--- a/translations/kangyur/translations/094-008_toh731-the_sutra_of_tara_who_protects_from_the_eight_dangers.xml
+++ b/translations/kangyur/translations/094-008_toh731-the_sutra_of_tara_who_protects_from_the_eight_dangers.xml
@@ -17,8 +17,7 @@
                 <title type="longTitle" xml:lang="Sa-Ltn">*Ārya­tārāṣṭa­ghora­tāraṇī­sūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་མ་སྒྲོལ་མ་འཇིགས་པ་བརྒྱད་ལས་སྐྱོབ་པའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="zh"/>
-                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Lhasey
-                    Lotsawa Translations and Publications<lb/>under the patronage and supervision of
+                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Samye Translations and Publications<lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-305">Stefan Mang</author>
                 <editor role="reviser" ref="contributors.xml#person-72">Oriane Lavolé</editor>
@@ -33,7 +32,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.2 <date>2021</date>
+                <edition>v 1.2.4 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +67,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-24T07:44:04.333Z" user="john">24/03/2021 07:44:04</note>
+                <note type="lastUpdated" date-time="2022-10-26T20:11:18.324Z" user="admin">26/10/2022 20:11:18</note>
                 <note type="updated" update="text-version" value="" date-time="2019-04-01T07:36:02.112Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-04-01T07:36:02.112Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-09-13T08:57:04.119Z" user="john">2.g</note>
@@ -107,6 +106,7 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2021-03-12T19:23:15.33Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.2.1" date-time="2021-03-23T11:54:04.54Z" user="john">Adjustments to 1,20, 1.29, dialogue punctuation, and corresponding mentions in intro, as discussed in editorial meeting.</note>
     <note type="updated" update="text-version" value="1.2.2" date-time="2021-03-23T11:55:15.127Z" user="john">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="1.2.3" date-time="2021-09-24T13:44:23.128Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-26T20:11:15.52Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -121,15 +121,14 @@
                     by beings in each of the six realms of saṃsāra and then points out the futility
                     of reciting mantras without maintaining pure conduct. She goes on to encourage
                     the listeners to engage in virtue, which puts an end to saṃsāra, and she bestows
-                    on them an incantation (<foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>) 
-                    that will help them to achieve this goal, a praise of her qualities, and a request for her divine
+                    on them a dhāraṇī that will help them to achieve this goal, a praise of her qualities, and a request for her divine
                     protection that they should recite. Finally, she enjoins the audience to read and practice the
                     teaching and share it with others.</p>
             </div>
             <div type="acknowledgment">
                 <head type="acknowledgment" tid="55">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-094-008-2"/>
-                <p tid="56">Translated by Lhasey Lotsawa Translations and Publications under the
+                <p tid="56">Translated by Samye Translations and Publications under the
                     guidance of Phakchok Rinpoche. The translation and introduction were produced by
                     Stefan Mang and Peter Woods, and edited by Oriane Lavolé.</p>
                 <p tid="4">This translation has been completed under the patronage and supervision
@@ -145,8 +144,7 @@
                         of saṃsāra. She explains that the fate of each being is the result of past
                         negative actions and that virtuous conduct is the only way to avoid
                         suffering in the future. Tārā describes the path to liberation using a
-                        series of evocative metaphors and also offers a sacred incantation 
-                        (<foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>) as a means to help
+                        series of evocative metaphors and also offers a sacred dhāraṇī as a means to help
                         others achieve liberation from saṃsāra. She also outlines for recitation a 
                         praise of her myriad qualities, in particular of her ability to
                         protect beings from the eight dangers. Finally, she encourages the
@@ -154,14 +152,14 @@
                     <milestone unit="chunk" xml:id="UT22084-094-008-4"/>
                     <p tid="7">The sūtra can be divided into three sections: (1) a concise teaching
                         given by Tārā on the suffering of saṃsāra and the virtuous practices that
-                        will eradicate such suffering and lead to fortunate states; (2) an
-                        incantation that practitioners can employ as a method for advancing toward
+                        will eradicate such suffering and lead to fortunate states; (2) a
+                        dhāraṇī that practitioners can employ as a method for advancing toward
                             liberation;<note place="end" xml:id="UT22084-094-008-5"> Parts
-                            of this incantation are also found in other incantations to Tārā such as
+                                of this dhāraṇī are also found in other dhāraṇīs to Tārā such as
                             the <foreign xml:lang="Sa-Ltn" type="term">Sādhanamālā</foreign> mantra
                                 of Vajratārā (Bhattacharyya 1925, p. 178) and <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh729.html">The
-                                Incantation of <term type="ignore">Tārā</term>
+                                Dhāraṇī of <term type="ignore">Tārā</term>
                                 </ref>
                             </title> (Toh 729, <title xml:lang="Bo-Ltn">sgrol
                                 ma’i
@@ -286,7 +284,7 @@
                             root of compassion.</l>
                         <l>You will practice virtue, striving avidly with body, speech, and
                             mind,</l>
-                        <l>And endeavor in this most profound quintessence.<note place="end" xml:id="UT22084-094-008-35"> Quintessence (<foreign xml:lang="Sa-Ltn">hṛdaya</foreign>, <foreign xml:lang="Bo-Ltn">snying po</foreign>) here refers to an incantation (<foreign xml:lang="Sa-Ltn">dhāraṇī</foreign>, <foreign xml:lang="Bo-Ltn">gzungs</foreign>) that is considered to encapsulate the essence
+                        <l>And endeavor in this most profound quintessence.<note place="end" xml:id="UT22084-094-008-35"> Quintessence (<foreign xml:lang="Sa-Ltn">hṛdaya</foreign>, <foreign xml:lang="Bo-Ltn">snying po</foreign>) here refers to a dhāraṇī that is considered to encapsulate the essence
                                 of a deity, in this case Tārā.</note>
                         </l>
                     </lg>
@@ -369,7 +367,7 @@
                             <foreign xml:lang="Sa-Ltn">oṁ</foreign>,
                             bodhisattva great lady, goddess, please protect us!</mantra>
                         <note place="end" xml:id="UT22084-094-008-48"> The first part of
-                            this incantation (<foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>) is an homage to Tārā. Since the Tibetan
+                            this dhāraṇī is an homage to Tārā. Since the Tibetan
                             translators chose to render this part into Tibetan, it is also
                             translated into English here.</note>
                     </p>
@@ -378,11 +376,11 @@
                         <mantra xml:lang="Sa-Ltn">oṁ nama āryāvalokiteśvarāya bodhi­sattvāya
                             mahā­sattvāya mahā­kāruṇikāya |</mantra>
                         <note place="end" xml:id="UT22084-094-008-49"> The second part of this
-                            incantation presents a standard homage to Avalokiteśvara. We have
+                                dhāraṇī presents a standard homage to Avalokiteśvara. We have
                             amended <foreign xml:lang="Sa-Ltn" type="term">namo</foreign> to
                                 <foreign xml:lang="Sa-Ltn" type="term">nama</foreign> following the
                             homage as given in the <title xml:lang="Sa-Ltn">Vajra­tārā­sādhanas</title> in the <title xml:lang="Sa-Ltn">Sādhana­mālā</title> (see e.g. Bhattacharyya 1925, p. 178) and
-                                <title xml:lang="en">The Incantation of Tārā</title>. A tentative
+                                <title xml:lang="en">The Dhāraṇī of Tārā</title>. A tentative
                             translation of it is as follows: “<mantra xml:lang="mixed">
                                 <foreign xml:lang="Sa-Ltn">oṁ</foreign>! Homage to Noble Avalokiteśvara,
                                 the bodhisattva mahāsattva, the great compassionate
@@ -399,11 +397,11 @@
                             kṛte jambhaya stambhaya mohaya bandhaya hūṁ hūṁ hūṁ phaṭ phaṭ phaṭ svāhā
                             |</mantra>
                         <note place="end" xml:id="UT22084-094-008-51"> The
-                            third part of this incantation is a request to Tārā to dispel obstacles.
-                            This part is found as an independent incantation in, for example, the
+                               third part of this dhāraṇī is a request to Tārā to dispel obstacles.
+                               This part is found as an independent dhāraṇī in, for example, the
                                 <title xml:lang="Sa-Ltn">Sādhanamālā</title> as the mantra of
                             Vajratārā (Bhattacharyya 1925, p. 178), <title xml:lang="en">The
-                                Incantation of Tārā</title>, and elsewhere (Beyer 1978, pp.
+                                Dhāraṇī of Tārā</title>, and elsewhere (Beyer 1978, pp.
                             280–281). A tentative translation of it is as follows: “<mantra xml:lang="mixed">It is like this: <foreign xml:lang="Sa-Ltn">oṁ</foreign>! Deliverer! Savior! Swift One! Crush, suppress,
                                 confound, restrain all the wrong and evil beings for me! <foreign xml:lang="Sa-Ltn">hūṁ hūṁ hūṁ phaṭ phaṭ phaṭ
                                 svāhā</foreign>!</mantra>”</note>
@@ -413,13 +411,13 @@
                         <mantra xml:lang="Sa-Ltn">nama āryāvalobhayā narā bodhisattvā mahā­sattvāni
                             adhiṣṭhānādhiṣṭhite mama sarva­karmāvaraṇa svabhāva­śuddhe <ref cRef="F.224.a" type="folio" xml:id="UT22084-094-008-116"/> viśuddhe śodhaya viśodhaya hūṁ phaṭ
                             svāhā |</mantra>
-                        <note place="end" xml:id="UT22084-094-008-52"> The fourth part of this incantation is a request to Tārā to purify
+                        <note place="end" xml:id="UT22084-094-008-52"> The fourth part of this dhāraṇī is a request to Tārā to purify
                             one’s obscurations. We have amended the first two beginning syllables
                                 <foreign xml:lang="Sa-Ltn" type="term">mama</foreign> to <foreign xml:lang="Sa-Ltn" type="term">nama</foreign> following the
-                            incantation as given in Butön’s <title xml:lang="en">Incantation
+                                dhāraṇī as given in Butön’s <title xml:lang="en">Dhāraṇī
                                 Collection</title> (<title xml:lang="Bo-Ltn">gzungs bsdus</title>)
                             in his <title xml:lang="en">Collected Works</title> (<foreign xml:lang="Bo-Ltn">gsung ’bum</foreign>). The remaining part of the
-                            incantation appears to be corrupted. The letters <foreign xml:lang="Sa-Ltn" type="term">bha</foreign> and <foreign xml:lang="Sa-Ltn" type="term">ka</foreign> are very similar and
+                                dhāraṇī appears to be corrupted. The letters <foreign xml:lang="Sa-Ltn" type="term">bha</foreign> and <foreign xml:lang="Sa-Ltn" type="term">ka</foreign> are very similar and
                             often confused in old Newar and other scripts, so <foreign xml:lang="Sa-Ltn" type="term">āryāvalobha-</foreign> probably was
                             originally <foreign xml:lang="Sa-Ltn" type="term">āryāvaloka-</foreign>.
                             This is probably a reference to Āryāvalokiteśvara, whose name might have
@@ -548,12 +546,12 @@
                         597–602.</bibl>
                     <bibl xml:id="UT22084-094-008-77">
                         <title xml:lang="Bo-Ltn">sgrol ma’i gzungs </title>[<title xml:lang="en">The
-                            Incantation of Tārā</title>]. Toh 729, Degé Kangyur vol. 94 (rgyud,
-                        tsha), folio 222.a. English translation in Lhasey Lotsawa Translations and Publications (2021).</bibl>
+                            Dhāraṇī of Tārā</title>]. Toh 729, Degé Kangyur vol. 94 (rgyud,
+                        tsha), folio 222.a. English translation in Samye Translations and Publications (2021).</bibl>
                     <bibl xml:id="UT22084-094-008-78">
                         <title xml:lang="Bo-Ltn">sgrol ma’i gzungs </title>[<title xml:lang="en">The
-                            Incantation of Tārā</title>]. Toh 1001, Degé Kangyur vol. 102 (gzungs,
-                        waM), folio 160.a. English translation in Lhasey Lotsawa Translations and Publications (2021).
+                            Dhāraṇī of Tārā</title>]. Toh 1001, Degé Kangyur vol. 102 (gzungs,
+                        waM), folio 160.a. English translation in Samye Translations and Publications (2021).
                     </bibl>
                     <bibl xml:id="UT22084-094-008-73">
                         <title xml:lang="Bo-Ltn">dam pa’i chos
@@ -575,8 +573,8 @@
                     <bibl xml:id="UT22084-094-008-82">Herrmann-Pfandt, Adelheid. <title xml:lang="de">Die lHan kar ma: ein früher Katalog der ins Tibetische
                             übersetzten buddhistischen Texte</title>. Vienna: Verlag der
                         Österreichischen Akademie der Wissenschaften, 2008.</bibl>
-                    <bibl xml:id="UT22084-094-008-118">Lhasey Lotsawa Translations and Publications, trans. <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh729.html">The Incantation of Tārā</ref>
+                    <bibl xml:id="UT22084-094-008-118">Samye Translations and Publications, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh729.html">The Dhāraṇī of Tārā</ref>
                         </title>. 84000: Translating the Words of the Buddha, 2021.</bibl>
                     <bibl xml:id="UT22084-094-008-112">Roberts, Peter Alan, trans. <title xml:lang="en">
                             <ref target="http://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma Sutra</ref>
@@ -595,6 +593,19 @@
             </div>
             <div type="glossary">
                 <list type="glossary">
+                    <item>
+                        <gloss type="term" xml:id="UT22084-094-008-119">
+                            <term>dhāraṇī</term>
+                            <term xml:lang="Bo-Ltn">gzungs </term>
+                            <term xml:lang="bo">གཟུངས།</term>
+                            <term xml:lang="Sa-Ltn">dhāraṇī</term>
+                            <term type="definition">The term <foreign xml:lang="Sa-Ltn">dhāraṇī</foreign> has the sense of something that “holds” or
+                                “retains,” and as such can refer to the special capacity of practitioners to memorize and recall detailed teachings.
+                                It can also refer to a verbal expression of the teachings—an incantation, spell, or mnemonic formula that distills and
+                                “holds” essential points of the Dharma and is used by practitioners to attain mundane and supramundane goals. The same
+                                term is also used to denote texts that contain such formulae.</term>
+                        </gloss>
+                    </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-094-008-96">
                             <term>banyan tree</term>
