--- a/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
+++ b/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
@@ -4,30 +4,38 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje dgra nag po'i rgyud kyi dka' 'grel</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">krsnayamaritantrapanjika</title>
-                <title type="mainTitle" xml:lang="en"/>
+                <title xml:lang="bo" type="mainTitle">གཤིན་རྗེ་དགྲ་ནག་པོའི་རྒྱུད་ཀྱི་དཀའ་འགྲེལ།</title>
+                <title xml:lang="Bo-Ltn" type="mainTitle">gshin rje dgra nag po'i rgyud kyi dka' 'grel/</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Kṛṣṇa­yamāri­tantra­pañjikā</title>
+                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Black Yamāri Tantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT23703-046-006"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1922" type="text">
                     <ref>Toh 1922</ref>
                     <biblScope>ff. 312v-337r</biblScope>
-                    <author role="translatorTib">a. padapani</author>
-                    <author role="translatorTib">t. paramesvara</author>
-                    <author role="translatorTib">rong zom chos kyi bzang po</author>
-                    <location count-pages="">
-                        <start volume="46" page="626"/>
-                        <end volume="46" page="676"/>
+                    <author ref="eft:entity-18026" xml:lang="Sa-Ltn">Padmapāṇi</author>
+                    <author role="translatorTib" ref="eft:entity-17657" xml:lang="Bo-Ltn">bod kyi lo tsa ba rong zom chos kyi bzang po</author>
+                    <author role="translatorTib" ref="eft:entity-18025" xml:lang="Sa-Ltn">Parameśvara</author>
+                    <location work="UT23703" count-pages="50">
+                        <volume number="46" start-page="624" end-page="673"/>
                     </location>
                     <idno parent-id="O1JC76301JC21622" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC76301JC8495" work="W23703"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:32:51 by admin</note>
+                <note type="lastUpdated" date-time="2022-10-31T09:18:19.713Z" user="admin">31/10/2022 09:18:19</note>
+                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1918-2089_PH_new_v2.4.xml" date-time="2021-11-02T13:37:19.254Z" user="admin"/>
+                <note type="updated" update="translation-status" value="3" date-time="2022-10-31T09:18:15.551Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-10-31T09:18:15.551Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
