--- a/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
+++ b/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
@@ -14,7 +14,7 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -37,7 +37,7 @@
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-14T08:24:02.772Z" user="admin">14/09/2022 08:24:02</note>
+                <note type="lastUpdated" date-time="2022-11-04T13:50:28.27Z" user="admin">04/11/2022 13:50:28</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:54:52.67Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:54:52.67Z" user="andreas">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-02-17T10:42:02.182Z" user="line-tofte">2.h</note>
@@ -50,6 +50,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T08:23:54.742Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="title" date-time="2022-11-04T13:50:24.047Z" user="john">An alternative Tibetan translation by Gö Khukpa Lhätse ('gos khug pa lhas btsas) is to be found in the Narthang and Kanxi Kangyurs.</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-11-04T13:50:24.047Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
